--- a/rpm/fluid.yaml
+++ b/rpm/fluid.yaml
@@ -10,24 +10,17 @@ Sources    :
 Configure  : cmake 
 ConfigOptions: 
     - -DCMAKE_BUILD_TYPE=RelWithDebInfo 
-#    - -DCMAKE_INSTALL_QMLDIR='${CMAKE_INSTALL_LIBDIR}/qt5/qml' 
-#    - -DCMAKE_INSTALL_PLUGINSDIR='${CMAKE_INSTALL_LIBDIR}/qt5/plugins' 
 PkgConfigBR:
     - liblzma
     - Qt5Core
-    - Qt5Xml
     - Qt5Gui
-    - Qt5DBus
-    - Qt5Widgets
-    - Qt5Svg
     - Qt5Qml
     - Qt5Quick
-    - Qt5OpenGL
-    - Qt5Designer
 
 PkgBR:
     - cmake
     - python
     - bzip2-devel
-#    - wayland-devel
 
+Files:
+    - "%{_libdir}/hawaii/qml/Fluid/"
